--- a/static/css/our.css
+++ b/static/css/our.css
@@ -227,3 +227,7 @@ tr:nth-child(even):hover {
     left: 50%;
     transform: translate(-50%, -50%);
   }
+.wrapper.overflow {
+  overflow-y: scroll;
+  display: inline-block;
+}
