--- a/templates/dontoverdose/displayPrescriberAndDrugs.html
+++ b/templates/dontoverdose/displayPrescriberAndDrugs.html
@@ -2,6 +2,11 @@
 {% load static %}
 {% block content %}
 
+
+<br><br>
+<a class="nav-link" href="{% url 'searchPrescriber' %}"><button>Search for another prescriber</button></a>
+
+
 <div>
     {% for triple in our_drugs %}
     <p>
