--- a/templates/dontoverdose/index.html
+++ b/templates/dontoverdose/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {%load static %}
 {% block content %}
-<link href="file:///Macintosh%20HD/Users/Evelyn/Desktop/IS%20403/BigFatLogos/github/INTEX_Project/OpioidAbuse/static/css/our.css" rel="stylesheet" type="text/css">
+<!-- <link href="file:///Macintosh%20HD/Users/Evelyn/Desktop/IS%20403/BigFatLogos/github/INTEX_Project/OpioidAbuse/static/css/our.css" rel="stylesheet" type="text/css"> -->
 <div class="containerCustom">
  <div class="parallax-window" data-parallax="scroll" data-image-src="{% static 'img/background.jpg'%}">
  </div>
