--- a/templates/dontoverdose/allDrugs.html
+++ b/templates/dontoverdose/allDrugs.html
@@ -11,6 +11,8 @@
                   <h3>Real hard stuff to swollow goes here&nbsp;</h3>
                   <p>Write here till your heart is content</p>
                 </div>
+                <a class="mybutton" href="{% url 'searchDrug' %}">Find a Drug</a>
+
             </div>
             <div class="card">
                 <table>
