--- a/templates/dontoverdose/searchPrescriber.html
+++ b/templates/dontoverdose/searchPrescriber.html
@@ -4,7 +4,7 @@
 <br><br>
 {% comment %} Go back to prescriber page {% endcomment %}
 <br><br>
-<a class="mybutton" href="{% url 'allPrescribers' %}">See all Prescirber</a>
+<a class="mybutton" href="{% url 'allPrescribers' %}">See all Prescribers</a>
 <br><br>
 <div class="row padding">
     <form name="form" method="get" action="{% url 'displayPrescriber' %}">
