--- a/templates/dontoverdose/displayDrug.html
+++ b/templates/dontoverdose/displayDrug.html
@@ -1,23 +1,114 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<br><br><br><br><br><br><br><br>
-<div class="parent">
+<br><br><br>
+<section>
+        <div class="parent">
+            <div class="intro">
+                <div class="intro-text">
+                  <h1>Search Results</h1>
+                  {% comment %} <h3>Real hard stuff to swollow goes here&nbsp;</h3> {% endcomment %}
+                  <p>See the top ten prescribers for the drug by clicking the button. </p>
+                </div>
+                {% comment %} <a class="mybutton" href="{% url 'allDrugs' %}">See all drugs</a>
+                <br> {% endcomment %}
+                <a class="mybutton" href="{% url 'allDrugs' %}">Find another drug</a>
+            </div>
+            <div class="card">
+                <table>
+                    <tr>
+                        {% comment %} <th></th>
+                        <th>NPI</th> {% endcomment %}
+                        <th>Link to click</th>
+                        <th>Drug Name</th>
+                        <th>Is Opioid?</th>
+                        
+                    </tr>
+
+            {% for drug in our_drugs %}           
+                    <tr>
+                       
+                        <td>
+                            {% comment %} <form name='form' method="get" action = {% url 'show_prescribed_drugs' %}>
+                                <label for='NPI' ></label>
+                                <input type="text"  name='NPI' id='NPI' hidden value={{prescriber.npi}}> 
+                                <div class="button2">
+                                    <button type = "submit">Click Me!</button>
+                                </div>
+                            </form>         {% endcomment %}
+                        </td>
+                        <td style="text-align: center;">
+                            {{ drug.drugname }}
+                        </td>
+                        <td style="text-align: center;">
+                            {{ drug.isopioid }}
+                        </td>
+                        
+                    </tr>
+        {% endfor %} 
+        </table>
+            </div>
+
+            
+        </div>
+    
+    </section>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
+{%endblock%}
+
+
+
+<!--
+    this needs to show the top 10 prescribers in the database for whatever type of drug is shown.
+
+
+
+
+    OLD CODE{% comment %} <div class="parent">
     <br><br>
     <div>
-        <a  href="{% url 'allDrugs' %}"><button>See all drugs</button></a>
-        <a  href="{% url 'searchDrug' %}"><button>Search for another drug</button></a>
+        <a class="mybutton" href="{% url 'allDrugs' %}">See all drugs</a>
+        <br><br>
+        <a class="mybutton" href="{% url 'searchDrug' %}">Search for another drug</a>
     </div>
     <br><br>
     {% for drug in our_drugs %}
     <p>  
         {{ drug.drugname }}
-        {{ drug.isopioid }}
-    </p>
+        {{ drug.isopioid }} {% endcomment %}
+        {% comment %} <form name='drug' method="get" action = {% url 'drugStats' %}>
+            <label for='NPI' ></label>
+            <input type="text"  name='NPI' id='NPI' hidden value={{prescriber.npi}}> 
+            <div class="column">
+                <button type = "submit">Show Prescribed Drugs</button>
+            </div>
+        </form> {% endcomment %}
+    {% comment %} </p>
     {% endfor%}
    
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
+
+
 <!--
-    this needs to show the top 10 prescribers in the database for whatever type of drug is shown.
+   
+    this needs to show the drugs that they have prescribed, and the average number of each type of drug that all prescribers prescribe.
+
+
+
+
+
+    
+-->
+
+
+
+{% comment %} {% endblock %}
+
+{% extends 'base.html' %}
+{%block content%}
+{%load static %} {% endcomment %}
+<!-- <link href="file:///Macintosh%20HD/Users/Evelyn/Desktop/IS%20403/BigFatLogos/github/INTEX_Project/OpioidAbuse/static/css/our.css" rel="stylesheet" type="text/css"> -->
+
 -->
