--- a/templates/dontoverdose/displayPrescriberAndDrugs.html
+++ b/templates/dontoverdose/displayPrescriberAndDrugs.html
@@ -3,8 +3,8 @@
 {% block content %}
 
 
-<br><br>
-<a class="nav-link" href="{% url 'searchPrescriber' %}"><button>Search for another prescriber</button></a>
+<br><br><br>
+<a class="mybutton" href="{% url 'searchPrescriber' %}">Search for another prescriber</a>
 
 
 <div>
