--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,8 @@
     {%endblock%}
 
 
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br> 
+    <br><br><br><br><br><br><br><br>
+    {% comment %} <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>   {% endcomment %}
 
 <!-- FOOTER -->
 <div class="daddy">
