--- a/templates/dontoverdose/searchPrescriber.html
+++ b/templates/dontoverdose/searchPrescriber.html
@@ -15,7 +15,7 @@
         <br><br> {% endcomment %}
         <!-- first name --> 
         <label for='first_name'>Enter the first name:</label>
-        <input type="text" name='first_name' id='fname' >
+        <input type="text" name='first_name' id='fname' autofocus>
         <br><br>
         <!-- last name --> 
         <label for='last_name'>Enter the last name:</label>
