--- a/templates/dontoverdose/displayPrescriber.html
+++ b/templates/dontoverdose/displayPrescriber.html
@@ -31,7 +31,7 @@
                     <tr>
                         {% comment %} <th></th>
                         <th>NPI</th> {% endcomment %}
-                        <th>Show Average/Drug</th>
+                        <th>Get Drug Information</th>
                         <th>First Name</th>
                         <th>Last Name</th>
                         <th>Gender</th>
